grammars/tree-sitter/grammar.js
		program: ($) => seq(optional($.hash_bang_line), repeat($.statement)),

		expression_statement: ($) => seq($.expression, $._semicolon),

		variable_declaration: ($) =>
			seq(choice('var', 'let', 'const'), commaSep1($.variable_declarator), $._semicolon),

		variable_declarator: ($) =>
			seq(
				field('name', choice($.identifier, $._destructuring_pattern)),
				optional($._type_annotation),
				optional($.initializer),
			),

		component_statement: ($) =>
			choice(
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.variable_declaration,
				$.lexical_declaration,
				$.function_declaration,
				$.class_declaration,
				$.expression_statement,
				$.if_statement,
				$.switch_statement,
				$.for_statement,
				$.for_in_statement,
				$.for_of_statement,
				$.while_statement,
				$.do_statement,
				$.try_statement,
				$.return_statement,
				$.throw_statement,
				$.break_statement,
				$.continue_statement,
				$.debugger_statement,
				$.empty_statement,
				$.style_element,
			),

		formal_parameters: ($) => seq('(', optional(commaSep($._formal_parameter)), optional(','), ')'),

		_formal_parameter: ($) => choice($.required_parameter, $.rest_parameter),

		required_parameter: ($) =>
			seq(
				field('pattern', choice($.identifier, $._destructuring_pattern)),
				optional('?'),
				optional($._type_annotation),
				optional($.initializer),
			),

		_destructuring_pattern: ($) =>
			choice($.object_pattern, $.array_pattern, $.lazy_object_pattern, $.lazy_array_pattern),

		object_pattern: ($) =>
			seq(
				'{',
				commaSep(
					choice(
						$.pair_pattern,
						$.rest_pattern,
						$.object_assignment_pattern,
						$.shorthand_property_identifier_pattern,
					),
				),
				optional(','),
				'}',
			),

		parenthesized_expression: ($) => seq('(', $.expression, ')'),

		call_expression: ($) =>
			prec(
				PREC.CALL,
				seq(
					field('function', choice($.expression, $.import)),
					field('arguments', choice($.arguments, $.template_string)),
				),
			),

		member_expression: ($) =>
			prec(
				PREC.MEMBER,
				seq(
					field('object', choice($.expression, $.primary_expression)),
					choice('.', '?.'),
					field('property', choice($.identifier, $.private_property_identifier)),
				),
			),

		arguments: ($) =>
			seq('(', commaSep(choice($.expression, $.spread_element)), optional(','), ')'),

		function_expression: ($) =>
			seq(
				optional('async'),
				'function',
				optional('*'),
				optional(field('name', $.identifier)),
				optional(field('type_parameters', $.type_parameters)),
				field('parameters', $.formal_parameters),
				optional($._type_annotation),
				field('body', $.statement_block),
			),

		arrow_function: ($) =>
			seq(
				optional('async'),
				choice(field('parameter', $.identifier), field('parameters', $.formal_parameters)),
				optional($._type_annotation),
				'=>',
				field('body', choice($.expression, $.statement_block)),
			),

		shorthand_property_identifier: ($) =>
			alias($.identifier, $.shorthand_property_identifier_pattern),

		shorthand_property_identifier_pattern: ($) =>
			alias($.identifier, $.shorthand_property_identifier),

		jsx_element: ($) =>
			seq(
				field('open_tag', $.jsx_opening_element),
				repeat(field('children', $._jsx_child)),
				field('close_tag', $.jsx_closing_element),
			),

		jsx_fragment: ($) =>
			seq(
				field('open_tag', $.jsx_opening_fragment),
				repeat(field('children', $._jsx_child)),
				field('close_tag', $.jsx_closing_fragment),
			),

		jsx_opening_element: ($) =>
			seq(
				'<',
				optional('@'),
				field('name', $.jsx_element_name),
				repeat(field('attribute', $._jsx_attribute)),
				'>',
			),

		jsx_opening_fragment: () => seq('<', '>'),

		jsx_closing_element: ($) => seq('</', optional('@'), field('name', $.jsx_element_name), '>'),

		jsx_closing_fragment: () => seq('</', '>'),

		// In Ripple, namespaced TSX-compat elements like <tsx:react> cannot be self-closing
		// so we disallow jsx_namespace_name here by using a narrowed name rule.
		jsx_self_closing_element: ($) =>
			seq(
				'<',
				optional('@'),
				field('name', $.jsx_non_namespaced_element_name),
				repeat(field('attribute', $._jsx_attribute)),
				'/>',
			),

		jsx_element_name: ($) =>
			choice($.identifier, $.jsx_namespace_name, $.jsx_member_name, $.member_expression),

		// Non-namespaced variant (used for self-closing elements)
		jsx_non_namespaced_element_name: ($) =>
			choice($.identifier, $.jsx_member_name, $.member_expression),

		// Support dotted names in JSX element names (e.g. Namespace.Component)
		// Implemented iteratively to avoid left recursion
		_jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

		jsx_expression: ($) =>
			seq(
				'{',
				optional(
					choice(
						$.expression,
						$.spread_element,
						seq('...', $.expression),
						seq('ref', choice($.identifier, $.arrow_function, $.function_expression)),
						seq('html', $.expression),
						seq('text', $.expression),
						$.style_directive,
						repeat1($.component_statement),
					),
				),
				'}',
			),

		_jsx_child: ($) =>
			choice(
				$._jsx_statement_child,
				$.jsx_text,
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.jsx_expression,
			),

		identifier: ($) => {
			const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			const alphanumeric =
				/[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			return token(seq(alpha, repeat(alphanumeric)));
		},

		string: ($) =>
			choice(
				seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
				seq("'", repeat(choice(token.immediate(prec(1, /[^'\\\n]+/)), $.escape_sequence)), "'"),
			),

		_type_annotation: ($) => seq(':', $.type),

		initializer: ($) => seq('=', $.expression),

		_semicolon: ($) => choice($._automatic_semicolon, ';'),
	},
});

function commaSep(rule) {
	return optional(commaSep1(rule));
}

function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}
